# wos

./: CMakeLists.txt  README.md  build.sh  toolchain.cmake
scripts/: build.sh  run-in-container.sh  run.sh
scripts/container/: Dockerfile  entrypoint.sh
src/: booter.s  linker.ld  main.c  main.cpp  main.h  main.hpp
